--- a/front-end/.env
+++ b/front-end/.env
@@ -1,2 +1,2 @@
 VITE_BACKEND_URL=http://localhost:4000
-VITE_RAZORPAY_KEY_ID="rzp_test_Rdyjn87E3arJJD"
+# VITE_RAZORPAY_KEY_ID="rzp_test_Rdyjn87E3arJJD"
